--- a/test.html
+++ b/test.html
@@ -12,6 +12,9 @@
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+		img{
+		border:solid 10px black;
+		}
 	</head>
 	<body class="is-preload">
 
