--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
 		<link rel="stylesheet" href="assets/css/main.css" />
-		img{
-		border:solid 10px black;
+		<link href="assets/test.css"rel="stylesheet"type="text/css"/>
+		#para1{
+		color:green;
 		}
 	</head>
 	<body class="is-preload">
@@ -75,7 +76,7 @@
 								<a href="https://baike.so.com/doc/6073690-6286766.html">济宁一中</a>
 								<li>2020年参加高考，被北京大学医学部预防医学（七年制）专业录取</li>
 							</ul>
-							<p>成长是痛苦和快乐的混合物，总是痛苦更多一些。我看到了人间的善与恶，我遇到了很多让我心怀感恩的人和事，我不后悔来到这个世界，我愿意接受离开时免不了的遗憾。</p>
+							<p id="para1">成长是痛苦和快乐的混合物，总是痛苦更多一些。我看到了人间的善与恶，我遇到了很多让我心怀感恩的人和事，我不后悔来到这个世界，我愿意接受离开时免不了的遗憾。</p>
 						</div>
 					</section>
 
