--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
 		<link rel="stylesheet" href="assets/css/main.css" />
-		<link href="assets/test.css"rel="stylesheet"type="text/css"/>
+		<link href="assets/main.css"rel="stylesheet"type="text/css"/>
 		#para1{
 		color:green;
 		}
