--- a/index.html
+++ b/index.html
@@ -149,10 +149,10 @@
 				<!-- Section -->
 					<section>
 						<header>
-							<h2>Duis sed adpiscing veroeros amet</h2>
+							<h2>Auf wiedersehen!</h2>
 						</header>
 						<div class="content">
-							<p><strong>Proin tempus feugiat</strong> sed varius enim lorem ullamcorper dolore aliquam aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore.</p>
+					
 							<ul class="actions">
 								<li><a href="#" class="button primary large">Get Started</a></li>
 								<li><a href="#" class="button large">Learn More</a></li>
@@ -456,15 +456,15 @@ print 'Sorted in ' + i + ' iterations.';</code></pre>
 							<ul class="items">
 								<li>
 									<h3>Email</h3>
-									<a href="#">information@untitled.ext</a>
+									<a href="#">928411225@qq.com</a>
 								</li>
 								<li>
 									<h3>Phone</h3>
-									<a href="#">(000) 000-0000</a>
+									<a href="#">86-18810535008</a>
 								</li>
 								<li>
 									<h3>Address</h3>
-									<span>1234 Somewhere Road, Nashville, TN 00000</span>
+									<span>北京市海淀区学院路38号</span>
 								</li>
 								<li>
 									<h3>Elsewhere</h3>
