--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
 								<li>性别：女</li>
 								<li>年龄：17</li>
 								<li>籍贯：中国大陆山东省济宁市泗水县</li>
+								<a href="https://baike.so.com/doc/5354889-5590353.html">泗水</a>
 								<li>出生日期：2002.10.25</li>
 								<li>星座：天蝎</li>
 								<li>属相：马</li>
